[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/onigiri.png" type="Texture" id=1]
[ext_resource path="res://onigiri/onigiri.gd" type="Script" id=2]
[ext_resource path="res://onigiri/idle.gd" type="Script" id=3]
[ext_resource path="res://onigiri/run.gd" type="Script" id=4]
[ext_resource path="res://scripts/anim.gd" type="Script" id=5]
[ext_resource path="res://onigiri/dead.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/onigiri:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/onigiri:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate/onigiri:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/onigiri:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/onigiri:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate/onigiri:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump_down"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/onigiri:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 51, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/onigiri:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -9 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/onigiri:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 0, 1, 0 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.56
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/onigiri:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.21, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 7, 3, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/onigiri:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate/onigiri:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.56
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/onigiri:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.21, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 7, 3, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/onigiri:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate/onigiri:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 96.0

[sub_resource type="CircleShape2D" id=8]
radius = 6.08276

[sub_resource type="CircleShape2D" id=9]

[node name="onigiri" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="score" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
position = Vector2( -7, -15 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -2 )
region_enabled = true
region_rect = Rect2( 1, 17, 14, 2 )

[node name="rotate" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="shadow" type="Sprite" parent="rotate"]
modulate = Color( 1, 1, 1, 0.545098 )
position = Vector2( 0, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -7 )
vframes = 8
hframes = 8
frame = 3

[node name="onigiri" type="Sprite" parent="rotate"]
texture = ExtResource( 1 )
offset = Vector2( 0, -7 )
vframes = 8
hframes = 8

[node name="anim" type="AnimationPlayer" parent="."]
anims/idle_down = SubResource( 2 )
anims/idle_up = SubResource( 3 )
anims/jump_down = SubResource( 4 )
anims/run_down = SubResource( 5 )
anims/run_up = SubResource( 6 )
script = ExtResource( 5 )

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 3 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="dead" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="search_rice" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="search_rice"]
visible = false
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="catch_nori" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="catch_nori"]
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="countdown" type="Timer" parent="."]

[node name="no_clicking" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="no_clicking"]
position = Vector2( 0, -4 )
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="area_entered" from="catch_nori" to="." method="_on_catch_nori_area_entered" flags=7]
[connection signal="timeout" from="countdown" to="." method="_on_countdown_timeout"]
